Add bearer auth in swagger api
